--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "styled-components": "^5.3.5",
+    "swiper": "^8.3.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
